# alpha-os

./: .gitignore  LICENSE  Makefile.am  README.md  autogen.sh  configure.ac  shell.nix
c/src/: Makefile.am  main.c
python/: setup.py  shell.nix
python/alpha_lib/: BasicTasks.py  Bootstrap.py  Output.py  Task.py
python/alpha_lib/lang/: lang.py
python/alpha_lib_old/: BasicTasks.py
python/docs/explore/: attempt-1.json
python/src/: alpha-os.py
