# Initial tasks
AC_PREREQ([2.72])
AC_INIT([alpha-os], [0.0.1], [alpha.catharsis@gmail.com])
AC_CONFIG_SRCDIR([src/main.c])
AC_CONFIG_HEADERS([src/config.h])
AM_INIT_AUTOMAKE([foreign])

# Checks for programs.
AC_PROG_AR
AC_PROG_AWK
AC_PROG_CC_C99
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB
AC_PROG_MKDIR_P

# Use the C language and compiler for the following checks
AC_LANG([C])

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

# Defines
AC_DEFINE([_POSIX_C_SOURCE], [200809L], [Define the POSIX version])

# Final tasks
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
